Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-63829

[macOS] Quick Controls 2 ApplicationWindow does not offer fullscreen feature by default

    XMLWordPrintable

Details

    • macOS
    • 35da2b87e3d04e4f7eb0895590be6952eeeb4a60 (qt/qtbase/5.14)

    Description

      It seems to be common practise for applications on macOS to offer fullscreen feature via the green button on the title bar. Quick Controls 2 ApplicationWindow does not follow this convention. The behavior also differs from that of Quick Controls 1 ApplicationWindow.

      Steps to reproduce:

      • Run the sample application attached on macOS.
      • Observe how the green button works. Compare with other apps on macOS.
        EXPECTED: The behavior follows macOS app convention.
        ACTUAL: The behavior does not follow macOS app convention.

      As a workaround you can explicitly set the flags needed:

      ApplicationWindow {
      
      flags: Qt.Window | Qt.WindowFullscreenButtonHint | Qt.WindowTitleHint | Qt.WindowSystemMenuHint | Qt.WindowMinMaxButtonsHint |            Qt.WindowCloseButtonHint | Qt.WindowFullscreenButtonHint
      
      }

      Attachments

        1. qtbug63829.zip
          2 kB
          Risto Sipola
        For Gerrit Dashboard: QTBUG-63829
        # Subject Branch Project Status CR V

        Activity

          People

            vestbo Tor Arne Vestbø
            risto.sipola Risto Sipola
            Votes:
            2 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes